tests/build/cases/widget_new/missing_value4.stderr
error: expected `;`
 --> cases/widget_new/missing_value4.rs:8:9
  |
8 |         margin = 0;
  |         ^^^^^^

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value4.rs:8:9
   |
6  | /         cursor =
7  | |         // we expect these properties to be used.
8  | |         margin = 0;
   | |         ^^^^^-
   | |______________|
   |                an argument is missing
   |
note: associated function defined here
  --> $WORKSPACE/zero-ui/src/properties/cursor_.rs
   |
   | #[property(context, default(CursorIcon::Default))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
6  |         margin(/* value */) = 0;
   |         ~~~~~~~~~~~~~~~~~~~
